refactor: Arrays.asList() -> List.of()